search weather widget was created

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,7 +1,7 @@
 <main-header></main-header>
-<blueberries [shift]="shift" (chooseCourseItem)="chooseCourseItem($event)">
-</blueberries>
-<authentication></authentication>
+<!-- <blueberries [shift]="shift" (chooseCourseItem)="chooseCourseItem($event)"></blueberries> -->
+<!-- <authentication></authentication> -->
+<weather></weather>
 <main class="container">
 	<router-outlet></router-outlet>
 </main>
